<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/nome_completo"
            android:inputType="textPersonName"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="193dp" />
        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_margin="15dp"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/nomeEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEt" />

        <RadioGroup
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tipoTelefoneRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/telefoneEt">

            <RadioButton
                android:id="@+id/ResidencialRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/residencial" />

            <RadioButton
                android:id="@+id/comercialRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/comercial" />
        </RadioGroup>
        <RadioButton
            android:id="@+id/adicionarCelularRb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:text="@string/adicionar_celular"
            app:layout_constraintTop_toBottomOf="@+id/tipoTelefoneRg"
            android:gravity="center"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/celularEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/celular"
            android:inputType="phone"
            android:layout_margin="15dp"
            android:visibility="invisible"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/adicionarCelularRb"
           />
        <TextView
            android:id="@+id/sexoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sexo"
            android:layout_margin="5dp"
            android:padding="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/celularEt" />
        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sexoTv">
            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Feminino"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Masculino"/>
        </RadioGroup>
        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/dataNascimentoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Data de nascimento"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexoRg"
            android:ems="10"
            app:mask="##/##/####"
            android:inputType="date" />

        <EditText
            android:id="@+id/vagasEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Vagas de interesse"
            android:inputType="text"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataNascimentoEt" />

        <TextView
            android:id="@+id/formacaoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Formação"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vagasEt"
            />
        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:entries="@array/formacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formacaoTv"
            />


            <EditText
                android:id="@+id/anoFormaturaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano_de_conclusao"
                android:inputType="number"
                android:layout_margin="15dp"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/formacaoSp"/>

        <LinearLayout
            android:id="@+id/graduacaoLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:visibility="visible"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/anoFormaturaEt"
            >
            <EditText
                android:id="@+id/instituicaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Instituição"
                android:inputType="textPersonName"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mestradoLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:visibility="invisible"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/anoFormaturaEt"
            >

            <EditText
                android:id="@+id/instituicaoMestradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instiui_o"
                android:inputType="textPersonName"
                />
            <EditText
                android:id="@+id/tituloMestradoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo_de_monografia"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/orientadorEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orientador"
                android:inputType="text"
                />
        </LinearLayout>


        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mestradoLl"/>
        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salvarBt"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
